tdf#98859 use ObjectOriented approach for Gdiplus

Current usage of Gdiplus uses direct procedure calls to e.g. allocate
Gdiplus specific objects. This includes the risk to forget to free
those objects. Using Gdiplus Objects in scopes avoids that.

Change-Id: I48f086d708cce67229edff0983b96e63c19907d7
Reviewed-on: https://gerrit.libreoffice.org/23492
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>